--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script>
 	$(document).ready(function(){
-    $("iframe").hide();
+    $("iframe").fuzzy();
      
-    $("#hide").click(function(){
-        $("iframe").hide(500);
-    });
-    $("#show").click(function(){
-        $("iframe").show(500);
+    $("#fuzzy").click(function(){
+        $("iframe").toggle(500);
     });
 	});
 	</script>
@@ -110,8 +107,7 @@
 		
 		<iframe width="100%" height="667px" frameborder="0" scrolling="no" src="http://tanvpntest.gq/"></iframe>
 		<div class="flex-container">
-		<button class="button button1" id="hide">Ẩn SpeedTest</button>
-		<button class="button button1" id="show">Hiện Speedtest</button>
+		<button class="button button1" id="fuzzy">Ẩn/Hiện SpeedTest</button>
 		</div>
         <!-- Section-->
         <section class="py-5">
