--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
             </div>
         </header>
 		
-		<iframe width="100%" height="667px" frameborder="0" scrolling="no" src="http://tanvpntest.gq/"></iframe>
+		<iframe width="100%" height="667px" frameborder="0" scrolling="no" src="https://tanvpn.speedtestcustom.com"></iframe>
 		<div class="flex-container">
-		<button class="button button1" id="fuzzy">Ẩn/Hiện SpeedTest</button>
+		
+		<a class="btn btn-outline-dark mt-auto" id="fuzzy" href="#">Ẩn/Hiện SpeedTest</a>
 		</div>
         <!-- Section-->
         <section class="py-5">
