--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		<div class="flex-container"><div style="z-index:2;padding-top:5px">
 		<a class="btn btn-outline-dark mt-auto" id="fuzzy" href="#" >Ẩn/Hiện SpeedTest</a>
 		</div>
-		<div style="z-index:1; top: 0rem; left: 0rem; position: absolute !important;">
-		<iframe width="80%" height="600px" frameborder="0" scrolling="no" src="https://tanvpn.speedtestcustom.com"></iframe></div>
+		<div style="z-index:1; top: 30rem; -webkit-writing-mode: vertical-lr;position: absolute !important;">
+		<iframe width="100%" height="600px" frameborder="0" scrolling="no" src="https://tanvpn.speedtestcustom.com"></iframe></div>
 		</div>
         <!-- Section-->
         <section class="py-5">
