--- a/file/1day.html
+++ b/file/1day.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Fuzzy Netflix Home</title>
+        <!-- Favicon-->
 <style>
  body{height:97vh;padding:0;display:grid;align-content:center;justify-content:center;}
 </style>
