--- a/index.html
+++ b/index.html
@@ -19,14 +19,11 @@
         $("#speedtest").toggle(500);
     });
 	});
-$("#netflix1").hide();
-$("#hide1").click(function(){
-	$("#netflix1").hide();
-});
-
-$("#show1").click(function(){
-	$("#netflix1").show();
-});
+	$(document).ready(function(){
+      $("#hup1").click(function(){
+        $("#cookie1").toggle(500);
+    });
+	});
 	</script>
 	<style>
 	div.cardtanshadow {
@@ -105,12 +102,11 @@ $("#show1").click(function(){
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center" id ="show1"><a class="btn btn-outline-dark mt-auto">Húp</a></div>
-								<div class="text-center" id ="hide1"><a class="btn btn-outline-dark mt-auto">Húp</a></div>
+                                <div class="text-center" id ="hup1"><a class="btn btn-outline-dark mt-auto">Húp</a></div>
 	                     </div>
 </div>                        </div>
                     </div>
-					<div id="netflix1"><iframe id="1" width="100%" height="620px" frameborder="0" scrolling="no" src="file:///D:/OneDrive%20-%20dotbt/T%C3%A0i%20li%E1%BB%87u/GitHub/fuzzynetflix/file/1day.html"></iframe></div>
+					<div id="cookie1"><iframe id="1" width="399" height="399px" frameborder="0" scrolling="no" src="https://tanvpntest.cf/file/1day.html"></iframe></div>
 <!--END2-->
  <!--START1-->
 			<div class="col mb-5">
