--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <link href="css/styles.css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 	<script>
-	$("#speedtest").hide();
+	$("#speedtest").toggle();
 	$(document).ready(function(){
       $("#fuzzy").click(function(){
         $("#speedtest").toggle(500);
     });
 	});
-	$("#cookie1").hide();
+	$("#cookie1").toggle();
 	$(document).ready(function(){
       $("#hup1").click(function(){
         $("#cookie1").toggle(500);
     });
 	});
-	$("#cookie2").hide();
+	$("#cookie2").toggle();
 	$(document).ready(function(){
       $("#hup2").click(function(){
         $("#cookie2").toggle(500);
